# nhl-sdk

./: .gitignore  README.md  client.py  pyproject.toml  tests.py
core/: cache.py  config.py  to_bool.py  transport.py  utilities.py
docs/: api-reference.md
models/: __init__.py  localized_string.py  player.py  team.py
models/bio/: __init__.py  award.py  badge.py  birth_details.py  draft.py  height.py  legacy.py  media.py  player_bio.py  weight.py
models/players/: __init__.py  spotlight.py
models/stats/: career_stats.py  featured_stats.py  game_stats.py  player_stats.py  stat_leaders.py  stats.py
players/: player.py  player_bio.py  players.py  stat_leaders.py
resources/api_stats/: players.py  teams.py
resources/api_web/: __init__.py  draft.py  games.py  league.py  miscellaneous.py  players.py  playoffs.py  season.py  teams.py
resources/errors/: errors.py
services/: __init__.py  players.py  teams.py
src/: client.py
src/core/: config.py  logger.py  transport.py  utilities.py
src/nhl_sdk/: __init__.py
src/resources/: __init__.py
src/services/: __init__.py  draft.py  games.py  league.py  misc.py  players.py  playoffs.py  teams.py
teams/: team.py
tests/: api_get_test.py  conftest.py  integration_test.py  players_test.py  test_main.py
tests/model_tests/: boxscore_test.py  conftest.py  daily_score_test.py  draft_picks_test.py  draft_rankings_test.py  draft_tracker_test.py  edge_landing_test.py  edge_leaders_test.py  edge_skater_comparison_test.py  edge_skater_detail_models_test.py  edge_skaters_test.py  edge_types_test.py  landing_test.py  league_test.py  misc_models_test.py  network_schedule_test.py  odds_test.py  pbp_test.py  player_game_logs_test.py  player_leaders_spotlight_test.py  player_milestone_summary_test.py  player_profile_test.py  player_reports_test.py  player_stats_test.py  playoff_bracket_test.py  playoff_carousel_test.py  playoff_series_test.py  scoreboard_test.py  standings_test.py  story_test.py  team_comparison_test.py  team_detail_test.py  team_edge_landing_test.py  team_ref_test.py  team_roster_test.py  team_schedule_test.py  team_shot_location_10_test.py  team_shot_location_test.py  team_shot_speed_10_test.py  (+8 more)
(+535 files in other folders)
