[project]
name = "nhl-stats"
version = "0.1.0"
description = "unofficial SDK for the NHL API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.0",
    "platformdirs>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-m", "not smoke"]
markers = [
    "smoke: live API test (requires network, excluded from default run)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]