[project]
name = "nhl-sdk"
version = "0.1.2"
description = "unofficial SDK for the NHL API"
readme = "README.md"
authors = [
    {name = "Josh Aiken", email = "josh@theloosemoose.us"},
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "platformdirs>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.25.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-m", "not smoke"]
markers = [
    "smoke: live API test (requires network, excluded from default run)",
]

[project.urls]
Homepage = "https://github.com/PandaBacon21/nhl-sdk"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]